report: set table background, not only table row background, to avoid body background leaking
New issue
Summary: Report background color sometimes leaks through tables
Status: Done
Owner: pekka.klarck
Labels: Target-2.8.4 Priority-Low Type-Defect
Report background sometimes leaks through summary and details tables that have white background. This seems to occur most often with Chrome.

The problem was that only row background was set to white and table background inherited transparent background (i.e. had same background as the page below them). In theory rows should cover the whole table, but my guess is that there are rounding errors which cause table to be shown between rows. Anyway, this is easy to fix by setting the table background explicitly.

--- a/src/robot/htmldata/rebot/report.css
+++ b/src/robot/htmldata/rebot/report.css
@@ -1,6 +1,7 @@
 /* Generic table styles */
 table {
     margin: 0 1px;
+    background: white;
 }
 tr {
     background: white;
